Test with JDK 25